# models

L_pipe/: model.config  model.sdf
L_pipe/meshes/: L_pipe.STL
box/: box.sdf  model.config
box/meshes/: box.STL
pipe/: model.config  model.sdf
pipe/meshes/: pipe.STL
scanner/: CMakeLists.txt  package.xml
scanner/meshes/collision/: scanner.stl
scanner/meshes/visual/: scanner.dae
t_pipe/: model.config  t_pipe.sdf
t_pipe/meshes/: collision.STL  collision2.STL  pipe.STL
table/: CMakeLists.txt  package.xml
table/launch/: display.launch  gazebo.launch
table/meshes/: table_link.STL
table/urdf/: table.csv  table.urdf
