<package format="2">
  <name>scanner</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for scanner</p>
    <p>This package contains 3D models for scanner</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
